First pass at adding exception count to IntervalData