@@ -73,6 +73,9 @@ public class IntervalData implements PerfMonObservableData {
     private long totalSQLDuration = 0;
     private long sumOfSQLSquares = 0;
     
+    private long totalExceptions = 0;
+    private long totalSQLExceptions = 0;
+    
     private long lifetimeMaxSQLDuration = 0;
     private long timeLifetimeMaxSQLDurationSet = PerfMon.NOT_SET;
 
@@ -319,6 +322,15 @@ public class IntervalData implements PerfMonObservableData {
         return totalSQLDuration;
     }
     
+/*----------------------------------------------------------------------------*/    
+    public long getTotalExceptions() {
+    	return totalExceptions;
+    }
+
+/*----------------------------------------------------------------------------*/    
+    public long getSQLTotalExceptions() {
+    	return totalSQLExceptions;
+    }
     
 /*----------------------------------------------------------------------------*/    
     public int getTotalHits() {
@@ -340,11 +352,19 @@ public class IntervalData implements PerfMonObservableData {
     }
     
     void stop(long duration, long durationSquared, long systemTime, long sqlDuration, long sqlDurationSquared) {
-    	stop(duration, durationSquared, systemTime, sqlDuration, sqlDurationSquared, false);
+    	stop(duration, durationSquared, systemTime, sqlDuration, sqlDurationSquared, 0L, 0L);
     }
     
-/*----------------------------------------------------------------------------*/    
+    void stop(long duration, long durationSquared, long systemTime, long sqlDuration, long sqlDurationSquared, long exceptionCount, long sqlExceptionCount) {
+    	stop(duration, durationSquared, systemTime, sqlDuration, sqlDurationSquared, exceptionCount, sqlExceptionCount, false);
+    }
+
     void stop(long duration, long durationSquared, long systemTime, long sqlDuration, long sqlDurationSquared, boolean forceSQLTime) {
+    	stop(duration, durationSquared, systemTime, sqlDuration, sqlDurationSquared, 0L, 0L, forceSQLTime);
+    }
+
+/*----------------------------------------------------------------------------*/    
+    void stop(long duration, long durationSquared, long systemTime, long sqlDuration, long sqlDurationSquared, long exceptionCount, long sqlExceptionCount, boolean forceSQLTime) {
         totalCompletions++;
         
         if (forceSQLTime || SQLTime.isEnabled()) {
@@ -359,6 +379,9 @@ public class IntervalData implements PerfMonObservableData {
             totalSQLDuration += sqlDuration;
             sumOfSQLSquares += sqlDurationSquared;
         }
+        
+        this.totalExceptions += exceptionCount;
+        this.totalSQLExceptions += totalSQLExceptions;
         
         if (duration >= maxDuration) {
             maxDuration = duration;
@@ -490,7 +513,24 @@ public class IntervalData implements PerfMonObservableData {
         }
         return result;
     }
-    
+
+/*----------------------------------------------------------------------------*/    
+    public long getExceptionsPerCompletion() {
+        long result = 0;
+        if (totalCompletions > 0) {
+            result = totalExceptions / totalCompletions;
+        }
+        return result;
+    }
+
+    /*----------------------------------------------------------------------------*/    
+    public long getSQLExceptionsPerCompletion() {
+        long result = 0;
+        if (totalCompletions > 0) {
+            result = totalSQLExceptions / totalCompletions;
+        }
+        return result;
+    }
     
     private static String formatTimeDataSet(long time) {
         String result = "";
@@ -537,6 +577,17 @@ public class IntervalData implements PerfMonObservableData {
         if (owner != null) {
             name = owner.getName();
         }
+        String exceptionInfo = "";
+        if (ExceptionTracker.isEnabled()) {
+        	exceptionInfo = String.format(
+	                " Avg. Exceptions.... %.2f\r\n" +
+	                " Avg. SQL Exceptions %.2f\r\n",
+	                Double.valueOf(getExceptionsPerCompletion()),
+	                Double.valueOf(getSQLExceptionsPerCompletion())
+	            );
+        }
+        
+        
         String sqlDurationInfo = "";
         if (includeSQLTime && !isSQLMonitor()) {
         	sqlDurationInfo = String.format(
@@ -544,11 +595,11 @@ public class IntervalData implements PerfMonObservableData {
 	                " (SQL)Std. Dev...... %.2f\r\n" +
 	                " (SQL)Max Duration.. %d %s\r\n" +
 	                " (SQL)Min Duration.. %d %s\r\n",
-	                new Double(getAverageSQLDuration()),
-	                new Double(getSQLStdDeviation()),
-	                new Long(getMaxSQLDuration()), 
+	                Double.valueOf(getAverageSQLDuration()),
+	                Double.valueOf(getSQLStdDeviation()),
+	                Long.valueOf(getMaxSQLDuration()), 
 	                formatTimeDataSet(timeMaxSQLDurationSet),
-	                new Long(getMinSQLDuration()),
+	                Long.valueOf(getMinSQLDuration()),
 	                formatTimeDataSet(timeMinSQLDurationSet)
 	            );
         }
@@ -569,25 +620,27 @@ public class IntervalData implements PerfMonObservableData {
             " Total Completions.. %d\r\n" +
             " Oldest Thread...... %s\r\n" +
             " Oldest Duration.... %d\r\n" +
+            "%s" +
             "%s",
             name,
             MiscHelper.formatTimeAsString(getTimeStart()),
             MiscHelper.formatTimeAsString(getTimeStop()),
-            new Integer(getMaxActiveThreadCount()),
+            Integer.valueOf(getMaxActiveThreadCount()),
             formatTimeDataSet(timeMaxActiveThreadCountSet),
-            new Double(getThroughputPerMinute()),
-            new Double(getAverageDuration()),
+            Double.valueOf(getThroughputPerMinute()),
+            Double.valueOf(getAverageDuration()),
             buildMedianString(),
             buildThresholdString(),
-            new Double(getStdDeviation()),
-            new Long(getMaxDuration()), 
+            Double.valueOf(getStdDeviation()),
+            Long.valueOf(getMaxDuration()), 
             formatTimeDataSet(timeMaxDurationSet),
-            new Long(getMinDuration()),
+            Long.valueOf(getMinDuration()),
             formatTimeDataSet(timeMaxDurationSet),
-            new Long(getTotalHits()), 
-            new Long(getTotalCompletions()),
+            Long.valueOf(getTotalHits()), 
+            Long.valueOf(getTotalCompletions()),
             oldestActiveThread,
             Long.valueOf(oldestActiveThreadDuration),
+            exceptionInfo,
             sqlDurationInfo
         );
         if (haveLifetimeStats) {
@@ -598,11 +651,11 @@ public class IntervalData implements PerfMonObservableData {
     	                " (SQL)Std. Dev...... %.2f\r\n" +
     	                " (SQL)Max Duration.. %d %s\r\n" +
     	                " (SQL)Min Duration.. %d %s\r\n",
-    	                new Double(getLifetimeAverageSQLDuration()),
-    	                new Double(getLifetimeSQLStdDeviation()),
-    	                new Long(getLifetimeMaxSQLDuration()), 
+    	                Double.valueOf(getLifetimeAverageSQLDuration()),
+    	                Double.valueOf(getLifetimeSQLStdDeviation()),
+    	                Long.valueOf(getLifetimeMaxSQLDuration()), 
     	                formatTimeDataSet(timeLifetimeMaxSQLDurationSet),
-    	                new Long(getLifetimeMinSQLDuration()),
+    	                Long.valueOf(getLifetimeMinSQLDuration()),
     	                formatTimeDataSet(timeLifetimeMinSQLDurationSet)
     	            );
             }
@@ -616,14 +669,14 @@ public class IntervalData implements PerfMonObservableData {
                 " Min Duration....... %d %s\r\n" +
                 "%s",
                 MiscHelper.formatDateTimeAsString(lifetimeStartTime),
-                new Integer(getLifetimeMaxThreadCount()),
+                Integer.valueOf(getLifetimeMaxThreadCount()),
                 formatTimeDataSet(timeLifetimeMaxActiveThreadCountSet),
                 lifetimeMaxThroughputPerMinute == null ? "" : lifetimeMaxThroughputPerMinute,
-                new Double(getLifetimeAverageDuration()),
-                new Double(getLifetimeStdDeviation()),
-                new Long(getLifetimeMaxDuration()),
+                Double.valueOf(getLifetimeAverageDuration()),
+                Double.valueOf(getLifetimeStdDeviation()),
+                Long.valueOf(getLifetimeMaxDuration()),
                 formatTimeDataSet(timeLifetimeMaxDurationSet),
-                new Long(getLifetimeMinDuration()),
+                Long.valueOf(getLifetimeMinDuration()),
                 formatTimeDataSet(timeLifetimeMinDurationSet),
                 sqlDurationInfo
             );
